made text that spilled out of the button not do that anymore with a nice fix lol

--- a/Javocular/src/app/barchart-CIMR/barchar-CIMR.component.css
+++ b/Javocular/src/app/barchart-CIMR/barchar-CIMR.component.css
@@ -1,3 +1,10 @@
 #buttons-container {
   margin-left: 10px;
 }
+
+.select-btn {
+  font-size: 85%;
+  height: 45px;
+  font-weight: bolder;
+  text-align: center;
+}
